# fortunes-unix

./: Makefile  README.md  setup.cfg
data/: unix-philosophy  unix-quotes
