[metadata]
name = fortunes-unix
description = Unix philosophy and quotes fortunes
long_description = file: README.md
long_description_content_type = text/markdown
version = 2021.8.7
license = Public Domain
author = Hubert Tournier
author_email = nobody@nowhere.invalid
url = https://github.com/HubTou/fortunes-unix/
project_urls =
    Bug Tracker = https://github.com/HubTou/fortunes-unix/issues
keywords = pnu-project, unix, fortune
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: Public Domain
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Fortune Cookies

[options]
package_dir =
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src

[options.data_files]
share/games/fortune = 
    data/unix-philosophy
    data/unix-philosophy.dat
    data/unix-quotes
    data/unix-quotes.dat

